--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>兴盛量化研究室 - 专注于数据驱动的策略模型探索</title>
+    <title>新量化研究室 - 专注于数据驱动的策略模型探索</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -67,7 +67,7 @@
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <svg class="w-8 h-8 text-yellow-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
-                <span class="text-xl font-bold text-white">兴盛量化研究室</span>
+                <span class="text-xl font-bold text-white">新盛量化研究室</span>
             </div>
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#home" class="text-gray-300 hover:text-yellow-400">首页</a>
@@ -88,7 +88,7 @@
                 <span class="text-yellow-400">用模型探索未来</span>
             </h1>
             <p class="mt-6 text-lg md:text-xl text-gray-300 max-w-3xl mx-auto">
-                兴盛量化研究室是一家专注于数据科学与量化策略模型研究的机构。我们痴迷于打磨各种量化分析模型，通过分享研究成果和工具，探索金融市场的复杂性。
+                新盛量化研究室是一家专注于数据科学与量化策略模型研究的机构。我们痴迷于打磨各种量化分析模型，通过分享研究成果和工具，探索金融市场的复杂性。
             </p>
             <div class="mt-8">
                 <a href="#partnership" class="btn-primary font-bold py-3 px-8 rounded-lg text-lg inline-block">立即洽谈</a>
@@ -195,7 +195,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 border-t border-gray-700">
         <div class="container mx-auto py-6 px-6 text-center text-gray-500">
-            <p>&copy; 2025 兴盛文化传媒有限公司. All Rights Reserved.</p>
+            <p>&copy; 2025 新盛文化传媒有限公司. All Rights Reserved.</p>
             <p class="text-xs mt-2">免责声明：本网站所有内容仅为学术研究与模型展示，不构成任何投资建议。市场有风险，投资需谨慎。</p>
         </div>
     </footer>
