--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section id="partnership" class="py-20 bg-gray-900">
         <div class="container mx-auto px-6 max-w-xl">
              <div class="counter-box text-center p-6 rounded-xl shadow-lg mb-10">
-                <p class="text-gray-300 text-lg">已有 <span id="counter" class="text-yellow-400 font-bold text-2xl">68,653</span> 位专业投资者获取报告</p>
+                <p class="text-gray-300 text-lg">已有 <span id="counter" class="text-yellow-400 font-bold text-2xl">85,976</span> 位专业投资者获取报告</p>
             </div>
             
             <h2 class="text-3xl font-bold text-white text-center mb-4">提交信息，即刻获取</h2>
@@ -178,7 +178,7 @@
                 <div>
                     <label for="name" class="block text-sm font-medium text-gray-300">姓名</label>
                     <input type="text" id="name" name="name" required class="form-input mt-1 block w-full rounded-md border-gray-600 shadow-sm focus:ring-yellow-500 sm:text-sm text-white p-3">
-                    <p class="mt-1 text-xs text-gray-500">*请使用与未来券商开户一致的真实姓名。</p>
+                    <p class="mt-1 text-xs text-gray-500">*券商开户一致的真实姓名。</p>
                 </div>
                 <div>
                     <label for="phone" class="block text-sm font-medium text-gray-300">手机号</label>
