--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <div>
                     <label for="name" class="block text-sm font-medium text-gray-300">姓名</label>
                     <input type="text" id="name" name="name" required class="form-input mt-1 block w-full rounded-md border-gray-600 shadow-sm focus:ring-yellow-500 sm:text-sm text-white p-3">
-                    <p class="mt-1 text-xs text-gray-500">*券商开户一致的真实姓名。</p>
+                    <p class="mt-1 text-xs text-gray-500">*券商开户一致的真实姓名</p>
                 </div>
                 <div>
                     <label for="phone" class="block text-sm font-medium text-gray-300">手机号</label>
