--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 border-t border-gray-700 py-6">
         <div class="container mx-auto px-6 text-center text-gray-500">
-            <p>&copy; 2025 新盛通文化传媒有限公司. All Rights Reserved.</p>
+            <p>&copy; 2025 新盛通量子科技有限公司. All Rights Reserved.</p>
             <p class="text-xs mt-2">免责声明：本网站所有内容仅为学术研究与模型展示，不构成任何投资建议。市场有风险，投资需谨慎。</p>
         </div>
     </footer>
