--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="#home" class="flex items-center cursor-pointer">
                 <svg class="w-8 h-8 text-yellow-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
-                <span class="text-xl font-bold text-white">新盛通量化</span>
+                <span class="text-xl font-bold text-white">新盛通量化研究室</span>
             </a>
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#home" class="text-gray-300 hover:text-yellow-400 text-sm font-medium">首页</a>
